--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "demo-demon",
-  "version": "0.1.0",
+  "name": "cra-with-setup-template",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
