--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
 		"eslint:recommended",
 		"plugin:@typescript-eslint/eslint-recommended",
 		"plugin:@typescript-eslint/recommended",
+		"eslint-config-prettier",
 		"prettier"
 	],
 	"rules": {
